<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UoE Informatics Timetable</string>
    <string name="action_settings">Settings</string>
    <string name="service_name">XML Downloader</string>
    <string name="title_activity_class_detail_fragment">ClassDetailFragment</string>
    <string name="optionsBtnDesc">Options</string>
    <string name="settingsBtnDesc">Settings</string>
    <string name="searchBtnDesc">Settings</string>
    <string name="searchHint">Search..</string>
    <string name="availableCourses">Available courses:</string>
    <string name="sidebarContentDesc">Course Image</string>

    <!-- Download and Parse -->
    <string name="downloadAndParseImgDesc">Download</string>
    <string name="downloadAndParseTitle">Download and Parse XML</string>
    <string name="downloadAndParseProgress">Progress:</string>
    <string name="downloadAndParseDefaultProgress">0</string>
    <string name="downloadAndParseXofY">of</string>
    <string name="downloadAndParseTotalDefault">3</string>
    <string name="actionBarDrawerFilters">FILTERS:</string>
    <string name="divider"> | </string>
    <string name="MON">MON</string>
    <string name="TUE">TUE</string>
    <string name="WED">WED</string>
    <string name="THU">THU</string>
    <string name="FRI">FRI</string>
    <string name="monTag">Monday</string>
    <string name="tueTag">Tuesday</string>
    <string name="wedTag">Wednesday</string>
    <string name="thuTag">Thursday</string>
    <string name="friTag">Friday</string>
    <string name="lectureDetailActivity">LectureDetailActivity</string>
    <string name="title_activity_lecture_detail">LectureDetailActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="years_">"Year: "</string>
    <string name="term_">"Term: "</string>
    <string name="level_">"Level: "</string>
    <string name="credit_">"Credit: "</string>
    <string name="lecturer_">Lecturer:</string>
    <string name="course_web_">Course web:</string>
    <string name="acronym_">Acronym:</string>
    <string name="euclid_">Euclid:</string>
    <string name="view_page">View Page</string>
    <string name="drps_">DRPS:</string>
    <string name="lectures_">Lectures:</string>
    <string name="_">-</string>
    <string name="course_name_or_acronym">Course name or Acronym</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="set_semester">Set semester</string>
    <string name="sem_1">Sem 1</string>
    <string name="sem_2">Sem 2</string>
    <string name="yr">YR</string>

</resources>
