<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/timetableTabsContainer"
    android:layout_width="match_parent"
    android:layout_height="35dp"
    android:orientation="horizontal"
    android:background="@color/timetableTabsBG">
    
    <TextView 
        android:id="@+id/timetableTabsMonday"
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="@color/timetableTabsText"
        android:textStyle="bold"
        android:onClick="onDayClickListener"
        android:text="@string/MON"
        android:tag="@string/monTag"/>
    
    <TextView 
        android:id="@+id/timetableTabsTuesday"
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="@color/timetableTabsText"
        android:textStyle="bold"
        android:onClick="onDayClickListener"
        android:text="@string/TUE"
        android:tag="@string/tueTag"/>
    
    <TextView 
        android:id="@+id/timetableTabsWednesday"
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="@color/timetableTabsText"
        android:textStyle="bold"
        android:onClick="onDayClickListener"
        android:text="@string/WED"
		android:tag="@string/wedTag"/>
    
    <TextView 
        android:id="@+id/timetableTabsThursday"
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="@color/timetableTabsText"
        android:textStyle="bold"
        android:onClick="onDayClickListener"
        android:text="@string/THU"
        android:tag="@string/thuTag"/>
    
    <TextView 
        android:id="@+id/timetableTabsFriday"
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="@color/timetableTabsText"
        android:textStyle="bold"
        android:onClick="onDayClickListener"
        android:text="@string/FRI"
        android:tag="@string/friTag"/>
    
    
    
</LinearLayout>

