<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sidebarBG"
    android:orientation="horizontal" >

    <TextView
        android:layout_marginLeft="5dp"
        android:layout_width="0dip"
        android:layout_height="50dp"
        android:layout_weight="15"
        android:gravity="center_vertical"
        android:text="@string/set_semester"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <RadioGroup
        android:layout_marginRight="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RadioButton
            android:textColor="@color/white"
            android:id="@+id/settingsSemester1Radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/sem_1" />

        <RadioButton
            android:textColor="@color/white"
            android:id="@+id/settingsSemester2Radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/sem_2" />
        
        <RadioButton
            android:textColor="@color/white"
            android:id="@+id/settingsSemesterYRRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/yr" />
    </RadioGroup>

</LinearLayout>