<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/titleBar"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:background="@drawable/title_bar" >
    
    <ImageView
        android:id="@+id/optionsBtn"
        android:layout_alignParentLeft="true"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingTop="10dp"
        android:layout_marginLeft="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:src="@drawable/ic_options"
        android:contentDescription="@string/optionsBtnDesc" />
    
    <ImageView
        android:id="@+id/searchBtn"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" 
        android:layout_toLeftOf="@+id/settingsBtn"
        android:src="@drawable/ic_search" 
        android:contentDescription="@string/searchBtnDesc" />

    <ImageView
        android:id="@+id/settingsBtn"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/ic_settings"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/settingsBtnDesc" />

    <EditText
        android:visibility="gone"
        android:id="@+id/searchField"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/searchBtn"
        android:background="@drawable/search_field"
        android:textSize="13sp"
        android:textColor="@color/white"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/course_name_or_acronym" >

        <requestFocus />
    </EditText>

</RelativeLayout>
