<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:minWidth="350dp" >
    
    <TextView
        android:id="@+id/lectureDetailTitle"
        android:layout_height="35dp"
        android:layout_width="match_parent"
        android:background="@color/timetableTabsBG"
        android:textColor="@color/timetableTabsText"
        android:textStyle="bold"
        android:text="Course title"
        android:gravity="center"/>
    
    <LinearLayout 
        android:baselineAligned="false"
   		android:layout_width="match_parent"
    	android:layout_height="wrap_content"
		android:background="@drawable/download_and_parse_style"
		android:id="@+id/downloadAndParse"
		android:layout_margin="10dp"
		android:orientation="horizontal">
		
        <!-- Left -->
        <LinearLayout
            android:layout_marginLeft="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/detail_view_border_right"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_width="40dp"
            android:orientation="vertical">
            <!-- Line 1 -->
            <LinearLayout 
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_height="30dp"
                android:layout_width="match_parent"
                android:orientation="horizontal">
                <TextView 
                    android:layout_height="match_parent"
                    android:layout_width="50dp"
                    android:minWidth="50dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/timeGreen"
                    android:textStyle="bold"
                    android:text="@string/years_"/>
                <TextView 
                    android:id="@+id/lectureDetailYears"
                    android:layout_height="match_parent"
                    android:layout_width="fill_parent"	
                    android:textColor="@color/black"
                    android:gravity="center"/>
            </LinearLayout>
            <!-- Line 2 -->
            <LinearLayout 
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_height="30dp"
                android:layout_width="match_parent"
                android:orientation="horizontal">
                <TextView 
                    android:layout_height="match_parent"
                    android:layout_width="50dp"
                    android:minWidth="50dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/timeGreen"
                    android:textStyle="bold"
                    android:text="@string/term_"/>
                <TextView 
                    android:textColor="@color/black"
                    android:id="@+id/lectureDetailSemester"
                    android:layout_height="match_parent"
                    android:layout_width="fill_parent"
                    android:gravity="center"/>
            </LinearLayout>
            
        </LinearLayout>
        
        <!-- Right -->
        <LinearLayout
            android:layout_marginLeft="6dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_width="40dp"
            android:orientation="vertical">
            <!-- Line 1 -->
            <LinearLayout 
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_height="30dp"
                android:layout_width="match_parent"
                android:orientation="horizontal">
                <TextView 
                    android:layout_height="match_parent"
                    android:layout_width="50dp"
                    android:minWidth="50dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/timeGreen"
                    android:textStyle="bold"
                    android:text="@string/level_"/>
                <TextView 
                    android:textColor="@color/black"
                    android:id="@+id/lectureDetailLevel"
                    android:layout_height="match_parent"
                    android:layout_width="fill_parent"
                    android:gravity="center"/>
            </LinearLayout>
            <!-- Line 2 -->
            <LinearLayout 
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_height="30dp"
                android:layout_width="match_parent"
                android:orientation="horizontal">
                <TextView 
                    android:layout_height="match_parent"
                    android:layout_width="50dp"
                    android:minWidth="50dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/timeGreen"
                    android:textStyle="bold"
                    android:text="@string/credit_"/>
                <TextView 
                    android:textColor="@color/black"
                    android:id="@+id/lectureDetailCredit"
                    android:layout_height="match_parent"
                    android:layout_width="fill_parent"
                    android:gravity="center"/>
            </LinearLayout>
            
        </LinearLayout>
	
    </LinearLayout>
    
    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/detail_view_border_bottom"
        android:orientation="horizontal"
        android:paddingBottom="5dp">
        
        <TextView
            android:text="@string/acronym_"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:textColor="@color/timeGreen"
            android:textStyle="bold" />
        
        <TextView 
            android:id="@+id/lectureDetailAcronym"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:textColor="@color/black"/>
        
    </LinearLayout>    
    
    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/detail_view_border_bottom"
        android:orientation="horizontal"
        android:paddingBottom="5dp">
        
        <TextView
            android:text="@string/lecturer_"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:textColor="@color/timeGreen"
            android:textStyle="bold" />
        
        <TextView 
            android:id="@+id/lectureDetailLecturer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:textColor="@color/black"/>
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/detail_view_border_bottom"
        android:orientation="horizontal"
        android:paddingBottom="5dp">
        
        <TextView
            android:text="@string/course_web_"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:textColor="@color/timeGreen"
            android:textStyle="bold" />
        
        <TextView
            android:id="@+id/lectureDetailCourseWeb"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:maxLines="1"
            android:text="@string/view_page"/>
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/detail_view_border_bottom"
        android:orientation="horizontal"
        android:paddingBottom="5dp">
        
        <TextView
            android:text="@string/euclid_"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:textColor="@color/timeGreen"
            android:textStyle="bold" />
        
        <TextView 
            android:id="@+id/lectureDetailEuclid"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:maxLines="1"
            android:text="@string/view_page"/>
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/detail_view_border_bottom"
        android:orientation="horizontal"
        android:paddingBottom="5dp">
        
        <TextView
            android:text="@string/drps_"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:textColor="@color/timeGreen"
            android:textStyle="bold" />
        
        <TextView 
            android:id="@+id/lectureDetailDrps"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:maxLines="1"
            android:text="@string/view_page"/>
        
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/lecturesDetailLecturesContainer"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/detail_view_border_bottom"
        android:orientation="vertical"
        android:paddingBottom="5dp">
        
        <TextView
            android:text="@string/lectures_"
            android:layout_width="80dp"
            android:layout_height="0dip"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:textColor="@color/timeGreen"
            android:textStyle="bold" />
        
        
    </LinearLayout>
    
    
    
    

</LinearLayout>
